--- a/tests/jstests/index.html
+++ b/tests/jstests/index.html
@@ -10,6 +10,7 @@
     <div id="qunit"></div>
     <div id="qunit-fixture"></div>
     <script src="https://code.jquery.com/qunit/qunit-2.0.0.js"></script>
+    <script src="helpers/responsivevoice.js"></script>
     <script src="../../ariane/static/js/main.js"></script>
     <script src="tests.js"></script>
   </body>
