--- a/tests/jstests/index.html
+++ b/tests/jstests/index.html
@@ -9,8 +9,14 @@
   <body>
     <div id="qunit"></div>
     <div id="qunit-fixture"></div>
+    <script type="text/javascript">
+      var userLanguage = 'en-GB';
+      var initializationTimeout = 0;
+    </script>
     <script src="https://code.jquery.com/qunit/qunit-2.0.0.js"></script>
-    <script src="helpers/responsivevoice.js"></script>
+    <script src="../../ariane/static/js/vendor/compiled.js"></script>
+    <script src="helpers/responsiveVoice.js"></script>
+    <script src="helpers/speechRecognition.js"></script>
     <script src="../../ariane/static/js/main.js"></script>
     <script src="tests.js"></script>
   </body>
