--- a/tests/jstests/index.html
+++ b/tests/jstests/index.html
@@ -15,8 +15,10 @@
     </script>
     <script src="https://code.jquery.com/qunit/qunit-2.0.0.js"></script>
     <script src="../../ariane/static/js/vendor/compiled.js"></script>
+    <script src="../../ariane/static/js/helpers/obj-keys.js"></script>
     <script src="helpers/responsiveVoice.js"></script>
     <script src="helpers/speechRecognition.js"></script>
+    <script src="helpers/testObj.js"></script>
     <script src="../../ariane/static/js/main.js"></script>
     <script src="tests.js"></script>
   </body>
