jstests: use local files instead of cdn.
Fixes #12

--- a/tests/jstests/index.html
+++ b/tests/jstests/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Ariane QUnit Frontendtests</title>
-    <link rel="stylesheet" href="https://code.jquery.com/qunit/qunit-2.0.0.css">
+    <link rel="stylesheet" href="../../node_modules/qunitjs/qunit/qunit.css">
   </head>
   <body>
     <div id="qunit"></div>
@@ -13,7 +13,7 @@
       var userLanguage = 'en-GB';
       var initializationTimeout = 0;
     </script>
-    <script src="https://code.jquery.com/qunit/qunit-2.0.0.js"></script>
+    <script src="../../node_modules/qunitjs/qunit/qunit.js"></script>
     <script src="../../ariane/static/js/vendor/compiled.js"></script>
     <script src="../../ariane/static/js/helpers/obj-keys.js"></script>
     <script src="helpers/responsiveVoice.js"></script>
