jstest: refactored helpers into helper.js

--- a/tests/jstests/index.html
+++ b/tests/jstests/index.html
@@ -16,9 +16,7 @@
     <script src="../../node_modules/qunitjs/qunit/qunit.js"></script>
     <script src="../../ariane/static/js/vendor/compiled.js"></script>
     <script src="../../ariane/static/js/helpers/obj-keys.js"></script>
-    <script src="helpers/responsiveVoice.js"></script>
-    <script src="helpers/speechRecognition.js"></script>
-    <script src="helpers/testObj.js"></script>
+    <script src="helpers.js"></script>
     <script src="../../ariane/static/js/main.js"></script>
     <script src="tests.js"></script>
   </body>
